# browser-cat

./: Cargo.toml  LICENSE  PLAN.md  README.md
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
src/: ansi.rs  browser.rs  html.rs  lib.rs  reader.rs  server.rs
