[package]
name = "browser-cat"
version = "0.1.0"
edition = "2024"
description = "Pipe text or HTML to your browser from the command line — a Rust port of bcat"
license = "MIT"
repository = "https://github.com/bluemultipass/browser-cat"

[[bin]]
name = "browser-cat"
path = "src/bin/browser-cat.rs"

[[bin]]
name = "a2h"
path = "src/bin/a2h.rs"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
clap = { version = "4", features = ["derive"] }
regex = "1"
html-escape = "0.2"
open = "5"
bytes = "1"
